fixed background image not showing

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ nav .darkmode i {
 /* ========== Contact ========== */
 
 .contact {
-    background-image: url(https://ycelik0.github.io/bootstrap/img/worldmap2jpg;);
+    background-image: url(https://ycelik0.github.io/bootstrap/img/worldmap2.jpg;);
     background-size: cover;
     background-position: center center;
 }
